corrected body overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,8 +13,11 @@
     box-sizing: border-box;
 }
 
-body{
+html, body{
     overflow-x: hidden;
+}
+body{
+    // overflow-x: hidden;
     // background-image: url(/images/bg-tablet-pattern.svg);
     // background-position: 50vw -10px;
     // background-position: top right;
@@ -26,7 +29,7 @@ body{
     position: relative;
 
     .bg--img{
-        position: fixed;
+        position: absolute;
         right: -100px;
         top: -50px;
         z-index: 1;
